# Mabel

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/animation/MabelDropInPackage/: Package.swift  README.md
assets/animation/MabelDropInPackage/Resources/Assets.xcassets/mabel_icon.imageset/: Contents.json
assets/animation/MabelDropInPackage/Sources/MabelCompanion/: MabelAppExample.swift  MabelConfiguration.swift  MabelDesktopWindowController.swift  MabelMenuBarController.swift  MabelScene.swift  MabelState.swift
assets/animation/Not Used/MochiProductionPackage/: README.md
assets/animation/Not Used/MochiProductionPackage/Assets/Mochi/: mochi_animation_config.json
assets/animation/Not Used/MochiProductionPackage/Docs/: MochiCharacterSpec.md
assets/animation/Not Used/MochiSpritePack_FIXED/: README.md
assets/animation/Not Used/MochiSpritePack_FIXED/Docs/: MochiCharacterSpec.md
assets/animation/Not Used/MochiSpritePack_Final/: README.md
assets/animation/Not Used/MochiSpritePack_Final/Docs/: MochiCharacterSpec.md
assets/animation/mabel_sprite_pack/: MabelDesktopWindowController.swift  MabelScene.swift  README.txt
docs/: code-review-2026-05-12.md  features-and-bugs.md  whatsnew.md
scripts/: release-macos.sh  set-dmg-icon.py  set-dmg-icon.sh  setup-dev-dylibs.sh
src/: companion.css  companion.html  companion.js  main.ts  overlay.css  overlay.html  overlay.js  style.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dylibs/: libggml-base.0.dylib  libggml-blas.0.dylib  libggml-cpu.0.dylib  libggml-metal.0.dylib  libggml.0.dylib  libwhisper.1.dylib
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  companion.rs  debug_log.rs  lib.rs  llm.rs  main.rs  overlay_macos.rs  paste.rs  recorder.rs  secrets.rs  settings.rs  stats.rs  streaming.rs  system_ui.rs  transcribe_groq.rs  transcribe_local.rs
(+8 files in other folders)
