[package]
name = "mabel"
version = "0.1.0"
description = "A dictation app powered by Whisper"
authors = ["Chibi Tech"]
edition = "2021"

[lib]
name = "mabel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
hound = "3.5"
tokio = { version = "1", features = ["full"] }
dirs = "6"
arboard = "3"
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native"] }
