[package]
name = "mabel"
version = "1.1.2"
description = "Privacy-first macOS dictation. Audio never leaves your Mac."
authors = ["Chibitek Labs"]
license = "MIT"
edition = "2021"

[lib]
name = "mabel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
hound = "3.5"
tokio = { version = "1", features = ["full"] }
dirs = "6"
arboard = "3"
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
